update some